# Convo

./: .gitignore  AUDIT.md  CLAUDE.md  CMakeLists.txt  LICENSE  OPTIMISATION.md  README.md  TEST_PLAN.md  prd.md
.github/workflows/: build.yml  release.yml  sign-macos.yml
Source/: ConvoLookAndFeel.cpp  ConvoLookAndFeel.h  ConvolutionEngine.cpp  ConvolutionEngine.h  IRLibrary.cpp  IRLibrary.h  MidSide.h  MixLink.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoftClip.h  UpdateCheck.h
packaging/: README.md  mvzn-release-key.asc
packaging/linux/: build-tarball.sh  install.sh
packaging/macos/: build-pkg.sh  import-certs.sh
packaging/windows/: Convo.iss
packaging/windows/signpath/: installer.xml  plugins.xml
tests/: JuceHeader.h  Makefile  runtests.cpp
